--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "campaignbutler",
-  "homepage": "http://durianharummlg-bit.github.io/campaignbutler",
+  "homepage": "http://arifinwm31.github.io/campaignbutler",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
